--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -15,17 +15,8 @@
             Resources
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <a href="/comments" class="dropdown-item">
-              Comments
-            </a>
-            <a href="/follow_requests" class="dropdown-item">
-              Follow Requests
-            </a>
-            <a href="/likes" class="dropdown-item">
-              Likes
-            </a>
-            <a href="/photos" class="dropdown-item">
-              Photos
+            <a href="/entries" class="dropdown-item">
+              Entries
             </a>
             <a href="/users" class="dropdown-item">
               Users
