--- a/app/views/user_templates/_user_own_photos.html.erb
+++ b/app/views/user_templates/_user_own_photos.html.erb
@@ -3,15 +3,15 @@
     Own Photos
 
     <a data-toggle="collapse" href="#user_own_photos_new_form">
-      Add photo
+      Add entry
     </a>
   </div>
 
   <ul class="list-group list-group-flush">
-    <% @user.own_photos.each do |photo| %>
+    <% @user.own_photos.each do |entry| %>
       <li class="list-group-item d-flex align-items-center justify-content-between">
-        <a href="/photos/<%= photo.id %>">
-          <%= photo.caption %>
+        <a href="/entries/<%= entry.id %>">
+          <%= entry.content %>
         </a>
 
       </li>
